# mcu_in_vs

./: .gitignore  CMakeLists.txt  CMakeLists_template.txt  CMaketest.cpp  README.md  STM32F407_FLASH.ld  环境配置记录.md
Libraries/CMSIS/: startup_stm32f40_41xxx.S
User/: main.c
app/touch_key/: touch_key.c
cmake/: arm-gcc-toolchain.cmake  utilities.cmake
cmakebuild/: Makefile
